<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow"
    tools:context=".MainFragment">

    <TextView
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:text="@string/Header"
        android:textSize="34sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black"
        android:textColor="@color/blue"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="42sp"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:layout_marginBottom="62dp"
            android:id="@+id/text_view" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/increment"
            android:backgroundTint="@color/red"
            android:layout_marginBottom="18dp"
            android:id="@+id/btn_1"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/decrement"
            android:backgroundTint="@color/red"
            android:layout_marginBottom="18dp"
            android:id="@+id/btn_2"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/btn_3"
            />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>